--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "handsontable": "^14.3.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -27,7 +30,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^6.1.1",
+    "vite": "^5.2.0"
   }
 }
