--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@handsontable/react": "^14.3.0",
     "chart.js": "^4.4.3",
     "handsontable": "^14.3.0",
+    "js-cookie": "^3.0.5",
     "papaparse": "^5.4.1",
     "quill": "^2.0.2",
     "react": "^18.2.0",
