--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "handsontable": "^14.3.0",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "papaparse": "^5.4.1",
     "quill": "^2.0.2",
     "react": "^18.2.0",
